[gd_scene load_steps=10 format=3 uid="uid://dab77wqbob2cf"]

[ext_resource type="Script" uid="uid://b3onhqt0i8qyt" path="res://Player/Weapons/scythe.gd" id="1_uy45p"]
[ext_resource type="Texture2D" uid="uid://b78baqiek514c" path="res://Player/Weapons/scythe.svg" id="2_lcugr"]
[ext_resource type="PackedScene" uid="uid://b11pygrnl2r41" path="res://Player/Weapons/targeting_square.tscn" id="3_lcugr"]
[ext_resource type="Script" uid="uid://uypu1ggoeek6" path="res://Player/Weapons/target_group.gd" id="3_veaer"]

[sub_resource type="Animation" id="Animation_veaer"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-15, -52)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../..:attacking")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_v1oko"]
resource_name = "attack_down"
length = 0.500003
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0669347, 0.16667, 0.500003),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-36, -46), Vector2(80, 28), Vector2(-101, 29), Vector2(-15, -52)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0669347, 0.16667, 0.500003),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [-1.5708, 2.84489, 3.31613, 0.0]
}

[sub_resource type="Animation" id="Animation_evtt8"]
resource_name = "attack_up"
length = 0.500003
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0669347, 0.16667, 0.500003),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-36, -46), Vector2(-61, -77), Vector2(82, -25), Vector2(-15, -52)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0669347, 0.16667, 0.500003),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [-1.5708, 0.0, 1.5708, 0.0]
}

[sub_resource type="Animation" id="Animation_uy45p"]
resource_name = "wind_up"
length = 0.16667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-15, -52), Vector2(-36, -46)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.166667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -1.5708]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../..:attacking")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.126582),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lcugr"]
_data = {
&"RESET": SubResource("Animation_veaer"),
&"attack_down": SubResource("Animation_v1oko"),
&"attack_up": SubResource("Animation_evtt8"),
&"wind_up": SubResource("Animation_uy45p")
}

[node name="Scythe" type="Node2D"]
script = ExtResource("1_uy45p")

[node name="ScytheImage" type="Node2D" parent="."]

[node name="ScytheSprite" type="Sprite2D" parent="ScytheImage"]
position = Vector2(-15, -52)
texture = ExtResource("2_lcugr")

[node name="AnimationPlayer" type="AnimationPlayer" parent="ScytheImage"]
root_node = NodePath("../ScytheSprite")
libraries = {
&"": SubResource("AnimationLibrary_lcugr")
}

[node name="TargetUp" type="Node2D" parent="."]
position = Vector2(0, -80)
script = ExtResource("3_veaer")

[node name="TargetingSquare" parent="TargetUp" instance=ExtResource("3_lcugr")]
position = Vector2(-100, 0)

[node name="TargetingSquare2" parent="TargetUp" instance=ExtResource("3_lcugr")]

[node name="TargetingSquare3" parent="TargetUp" instance=ExtResource("3_lcugr")]
position = Vector2(100, 0)

[node name="TargetDown" type="Node2D" parent="."]
position = Vector2(0, 80)
script = ExtResource("3_veaer")

[node name="TargetingSquare" parent="TargetDown" instance=ExtResource("3_lcugr")]
position = Vector2(-100, 0)

[node name="TargetingSquare2" parent="TargetDown" instance=ExtResource("3_lcugr")]

[node name="TargetingSquare3" parent="TargetDown" instance=ExtResource("3_lcugr")]
position = Vector2(100, 0)

[node name="TargetLeft" type="Node2D" parent="."]
position = Vector2(-100, 0)
script = ExtResource("3_veaer")

[node name="TargetingSquare" parent="TargetLeft" instance=ExtResource("3_lcugr")]
position = Vector2(0, -80)

[node name="TargetingSquare2" parent="TargetLeft" instance=ExtResource("3_lcugr")]

[node name="TargetingSquare3" parent="TargetLeft" instance=ExtResource("3_lcugr")]
position = Vector2(0, 80)

[node name="TargetRight" type="Node2D" parent="."]
position = Vector2(100, 0)
script = ExtResource("3_veaer")

[node name="TargetingSquare" parent="TargetRight" instance=ExtResource("3_lcugr")]
position = Vector2(0, -80)

[node name="TargetingSquare2" parent="TargetRight" instance=ExtResource("3_lcugr")]

[node name="TargetingSquare3" parent="TargetRight" instance=ExtResource("3_lcugr")]
position = Vector2(0, 80)
